Added sing in button

--- a/core/src/main/resources/static/css/header.css
+++ b/core/src/main/resources/static/css/header.css
@@ -622,3 +622,13 @@ header {
     position: absolute;
     right: 40px;
 }
+
+.login button {
+    background-color: #13aa57;
+    border-radius: 4px;
+    border: none;
+    color: white;
+}
+
+
+
