implementing deletion of the event, soft delete if there are attenders, hard delete if not

--- a/core/src/main/resources/static/css/sidebar.css
+++ b/core/src/main/resources/static/css/sidebar.css
@@ -199,7 +199,18 @@ block:hover img{
     color: white;
 }
 
+button.close {
+    padding: 2rem 1rem !IMPORTANT;
+}
 
+button.close:active {
+    border: none !important;
+    outline: 0;
+}
+
+button.close:focus {
+    outline: 0;
+}
 
 
 
