--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -410,7 +410,7 @@ table.table td a.edit {
     color: #FF9310;
 }
 
-table.table td a.delete {
+table.table td a.delete, p.delete, span.delete{
     color: #E02116;
 }
 
